[package]
name = "pls"
version = "0.1.0"
authors = ["Albert <albert_p@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-server = { path="/Users/albert/code/lsp-server" }
tagua-parser = "0.1.0"
lsp-types = "0.73.0"
log = "0.4.8"
flexi_logger = "0.15.2"
serde_json = "1.0.51"
serde = "1.0.106"
